# common-core-mcp

./: .env.example  .gitignore  README.md  app.py  pyproject.toml  requirements.txt
.agent/docs/: common_core_spec.md  hackathon_criteria.md  user_stories.md
.agent/specs/: .gitignore
.agent/specs/000_data_cli/: spec.md
.agent/specs/001_pinecone/: spec.md  tasks.md
.agent/specs/002_mcp/: spec.md  tasks.md
.agent/specs/003_gradio/: spec.md  tasks.md
.cursor/commands/: draft_spec.md
.cursor/rules/standards/code_style/: readme.mdc
.github/workflows/: sync_to_hub.yml
data/: .gitkeep
src/: __init__.py  lookup.py  mcp_config.py  pinecone_client.py  search.py
tests/: __init__.py  test_pinecone_client.py  test_pinecone_models.py  test_pinecone_processor.py
tools/: __init__.py  api_client.py  cli.py  config.py  data_manager.py  models.py  pinecone_client.py  pinecone_models.py  pinecone_processor.py
