[project]
name = "common-core-mcp"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "gradio[mcp]>=6.0.0",
    "pinecone",
    "python-dotenv",
    "typer",
    "requests",
    "rich",
    "loguru",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "huggingface_hub",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
